# student-noHik

./: CMakeLists.txt
main/: .main.cpp.swp  main.cpp
student/: Timer.cpp  behavior.cpp  face.cpp  facefeature.cpp  fs.cpp  functions.cpp  hand.cpp  jfda.cpp  pose.cpp  student.cmake  student.cpp
student/student/: Timer.hpp  behavior.hpp  face.hpp  facefeature.hpp  fs.hpp  functions.hpp  hand.hpp  jfda.hpp  pose.hpp  student.hpp
